--- a/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -56,16 +56,13 @@
                     </div>
                     <ul class="header__right__widget">
                         <li><span class="icon_search search-switch"></span></li>
-                        <li><a href="#"
-                                ><span class="icon_heart_alt"></span>
+                        <li>
+                            
+                            <a href="#"><span class="icon_heart_alt"></span>
                                 <div class="tip">2</div>
-                            </a></li>
-                        <li><a 
-                                asp-area=""
-                                asp-controller="ShoppingCart"
-                                asp-action="Index"><span class="icon_bag_alt"></span>
-                                <div class="tip">2</div>
-                            </a></li>
+                            </a>
+                        </li>
+@await Component.InvokeAsync("ShoppingCartNotification",User.Identity.Name??null)
                     </ul>
                 </div>
             </div>
