--- a/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Views/Shared/Components/ShoppingCartNotification/Default.cshtml
+++ b/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Views/Shared/Components/ShoppingCartNotification/Default.cshtml
@@ -1,5 +1,9 @@
+@model int
 <li>
-    <a href="#"><span class="icon_bag_alt"></span>
-        <div class="tip">2</div>
+    <a
+        asp-area=""
+        asp-controller="ShoppingCart"
+        asp-action="Index"><span class="icon_bag_alt"></span>
+        <div class="tip">@Model</div>
     </a>
 </li>
