tascagdas user added as migration

--- a/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
+++ b/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
@@ -109,7 +109,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="Admin" asp-controller="User" asp-action="zzGetCustomerUsers" class="nav-link">
+                            <a asp-area="Admin" asp-controller="User" asp-action="GetCustomerUsers" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Müşteriler</p>
                             </a>
