Admin Panelde sidebar'da user bilgilerini gösterme halledildi.

--- a/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/SidebarUserPanel/Default.cshtml
+++ b/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/SidebarUserPanel/Default.cshtml
@@ -1,9 +1,10 @@
-﻿<!-- Sidebar user panel (optional) -->
+﻿@model User
+<!-- Sidebar user panel (optional) -->
 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
     <div class="image">
         <img src="~/admin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
     </div>
     <div class="info">
-        <a href="#" class="d-block">Engin Niyazi Ergül</a>
+        <a href="#" class="d-block">@ViewBag.firstName @ViewBag.lastName</a>
     </div>
 </div>
