Tip uyuşmazlığı hatası giderildi ve admin panelden uygulamaya geçiş linkindeki yazı düzeltildi.

--- a/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
+++ b/Section-11-Identity/Week-18/15-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
@@ -4,7 +4,7 @@
     <a asp-area="" asp-controller="Home" asp-action="Index" class="brand-link text-center">
          @* <img src="~/admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" *@
          @*    style="opacity: .8">  *@
-        <span class="brand-text font-weight-light">MiniShop Yönetim Paneli</span>
+        <span class="brand-text font-weight-light">MiniShop Anasayfa</span>
     </a>
 
     <!-- Sidebar -->
