odeme islemleri devam ediyor request olusturuldu. api keyde sorun var (iyziconun kendisinde)

--- a/Section-11-Identity/Week-19/21-02-2024/MiniShop/MiniShop.UI/Views/ShoppingCart/Index.cshtml
+++ b/Section-11-Identity/Week-19/21-02-2024/MiniShop/MiniShop.UI/Views/ShoppingCart/Index.cshtml
@@ -120,7 +120,7 @@
                         <li>Ara Toplam <span>@($"{cartSubTotal:C0}")</span></li>
                         <li>Toplam<span>@($"{cartTotal:C0}")</span></li>
                     </ul>
-                    <a href="#" class="primary-btn">Satın Al</a>
+                    <a asp-controller="Order" asp-action="Checkout" class="primary-btn">Satın Al</a>
                 </div>
             </div>
         </div>
