--- a/Section-11-Identity/Week-19/22-02-2024/MiniShop/MiniShop.UI/Views/Order/Checkout.cshtml
+++ b/Section-11-Identity/Week-19/22-02-2024/MiniShop/MiniShop.UI/Views/Order/Checkout.cshtml
@@ -15,6 +15,9 @@
                   method="post"
                   class="checkout__form">
                 <div class="row">
+                    <div class="col-lg-12 text-danger mb-3" asp-validation-summary="All">
+                        
+                    </div>
                     <div class="col-lg-8">
                         <h5>Fatura Bilgileri</h5>
                         <div class="row">
@@ -69,56 +72,56 @@
                                     <input asp-for="CardName">
                                 </div>
                             </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <div class="checkout__form__input">
-                                        <p>Kart Numarası <span>*</span></p>
-                                        <input asp-for="CardNumber">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                    <div class="checkout__form__input">
-                                        <p>Geçerlilik Tarihi Ay: <span>*</span></p>
-                                        <input asp-for="ExpirationMonth">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                    <div class="checkout__form__input">
-                                        <p>Geçerlilik Tarihi Yıl: <span>*</span></p>
-                                        <input asp-for="ExpirationYear">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                    <div class="checkout__form__input">
-                                        <p>Cvc Güvenlik Kodu: <span>*</span></p>
-                                        <input asp-for="Cvc">
-                                    </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6">
+                                <div class="checkout__form__input">
+                                    <p>Kart Numarası <span>*</span></p>
+                                    <input asp-for="CardNumber">
                                 </div>
                             </div>
-                    </div>
-                        <div class="col-lg-4">
-                            <div class="checkout__order">
-                                <h5>Your order</h5>
-                                <div class="checkout__order__product">
-                                    <ul>
-                                        <li>
-                                            <span class="top__text">Ürün</span>
-                                            <span class="top__text__right">Tutar</span>
-                                        </li>
-                                        @foreach (var item in Model.ShoppingCart.ShoppingCartItems)
-                                        {
-                                            <li>@item.ProductName (@item.Quantity) <span>@($"{(item.ProductPrice*item.Quantity):C0}")</span></li>
-                                        }
-                                    </ul>
+                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                <div class="checkout__form__input">
+                                    <p>Geçerlilik Tarihi Ay: <span>*</span></p>
+                                    <input asp-for="ExpirationMonth">
                                 </div>
-                                <div class="checkout__order__total">
-                                    <ul>
-                                        <li>Ödenecek Tutar <span>@($"{Model.ShoppingCart.TotalPrice():C0}")</span></li>
-                                    </ul>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                <div class="checkout__form__input">
+                                    <p>Geçerlilik Tarihi Yıl: <span>*</span></p>
+                                    <input asp-for="ExpirationYear">
                                 </div>
-                                <button type="submit" class="site-btn">Ödemeyi Tamamla</button>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                <div class="checkout__form__input">
+                                    <p>Cvc Güvenlik Kodu: <span>*</span></p>
+                                    <input asp-for="Cvc">
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4">
+                        <div class="checkout__order">
+                            <h5>Your order</h5>
+                            <div class="checkout__order__product">
+                                <ul>
+                                    <li>
+                                        <span class="top__text">Ürün</span>
+                                        <span class="top__text__right">Tutar</span>
+                                    </li>
+                                    @foreach (var item in Model.ShoppingCart.ShoppingCartItems)
+                                    {
+                                        <li>@item.ProductName (@item.Quantity) <span>@($"{(item.ProductPrice * item.Quantity):C0}")</span></li>
+                                    }
+                                </ul>
+                            </div>
+                            <div class="checkout__order__total">
+                                <ul>
+                                    <li>Ödenecek Tutar <span>@($"{Model.ShoppingCart.TotalPrice():C0}")</span></li>
+                                </ul>
+                            </div>
+                            <button type="submit" class="site-btn">Ödemeyi Tamamla</button>
+                        </div>
+                    </div>
+                </div>
                 </form>
             </div>
         </section>
