--- a/Section-11-Identity/Week-19/24-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Section-11-Identity/Week-19/24-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using MiniShop.Entity.Concrete.Identity
 @using MiniShop.Shared.ViewModels.IdentityModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using MiniShop.UI.Areas.Admin.Models
