--- a/Section-11-Identity/Week-19/24-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Home/Index.cshtml
+++ b/Section-11-Identity/Week-19/24-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Content Wrapper. Contains page content -->
+﻿@model List<AdminOrderViewModel>
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
@@ -85,6 +86,57 @@
                 <!-- ./col -->
             </div>
             <!-- /.row -->
+            
+            <!-- Orders-->
+            <div class="row">
+                <div class="col-lg-6 col-3">
+                    <div class="card">
+                        <div class="card-header border-0">
+                            <h3 class="card-title">Products</h3>
+                            <div class="card-tools">
+                                <a asp-area="Admin"
+                                   asp-controller="Order"
+                                   asp-action="Index"
+                                   class=" card-title ">
+                                    Tüm Siparişler
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card-body table-responsive p-0">
+                            <table class="table table-striped table-valign-middle">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Tarih</th>
+                                        <th>Üye</th>
+                                        <th>Tutar</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                @foreach (var order in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @order.Id
+                                        </td>
+                                        <td>
+                                            @order.OrderDate
+                                        </td>
+                                        <td>
+                                            @order.UserName
+                                        </td>
+                                        <td>
+                                            @($"{order.TotalPrice:C0}")
+                                        </td>
+                                    </tr>
+                                }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/ Orders-->
         </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
