--- a/Section-11-Identity/Week-20/28-02-2024/MiniShop/MiniShop.UI/Views/Account/Profile.cshtml
+++ b/Section-11-Identity/Week-20/28-02-2024/MiniShop/MiniShop.UI/Views/Account/Profile.cshtml
@@ -2,10 +2,102 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
+            <form asp-area="" asp-controller="Account" asp-action="Profile" method="post">
+                <div class="d-flex justify-content-between align-items-center">
+                <h6 class="display-4 text-primary mt-1 mb-2" style="font-size: 30px">Kulanici bilgileri</h6>
+                <div class="">
+                    <a asp-controller="Account" asp-action="ChangePassword" class="btn btn-primary btn-sm"> Sifre degistir</a>
+                </div>
+                </div>
+                <div class="row">
+                    <div class="text-danger col-md-12"
+                         asp-validation-summary="All">
+                    </div>
 
+                    <div class="col-md-6">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.FirstName"></label>
+                            <input class="form-control" asp-for="User.FirstName"/>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.LastName"></label>
+                            <input class="form-control" asp-for="User.LastName"/>
+                        </div>
+                    </div>
+
+                    @* --- *@
+
+                    <div class="col-md-12">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.Address"></label>
+                            <textarea class="form-control" asp-for="User.Address"></textarea>
+                        </div>
+                    </div>
+
+                    @* --- *@
+
+                    <div class="col-md-4">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.City"></label>
+                            <input class="form-control" asp-for="User.City"/>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.Gender"></label>
+                            <select class="form-control" asp-for="User.Gender">
+                                <option value="Kadın">Kadın</option>
+                                <option value="Erkek">Erkek</option>
+                                <option value="belirtilmedi">Belirtmek İstemiyorum</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.UserName"></label>
+                            <input class="form-control" asp-for="User.UserName"/>
+                        </div>
+                    </div>
+
+                    @* --- *@
+
+                    <div class="col-md-4">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.Email"></label>
+                            <input class="form-control" asp-for="User.Email"/>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.PhoneNumber"></label>
+                            <input class="form-control" asp-for="User.PhoneNumber"/>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group mb-2">
+                            <label class="" asp-for="User.DateOfBirth"></label>
+                            @{
+                                var year = DateTime.Today.Year - 18;
+                                var month = DateTime.Today.Month;
+                                string monthString = month < 10 ? "0" + month.ToString() : month.ToString();
+                                var day = DateTime.Today.Day;
+                                string dayString = day < 10 ? "0" + day.ToString() : day.ToString();
+                                var maxDate = $"{year}-{monthString}-{dayString}";
+                            }
+                            <input class="form-control" type="date" min="1900-01-01" max="@maxDate" asp-for="User.DateOfBirth"/>
+                        </div>
+                    </div>
+
+                    @* --- *@
+
+                </div>
+                <button type="submit" class="btn btn-success mt-3 btn-block">Degisikleri kaydet ve anasayfaya dön</button>
+            </form>
         </div>
         <div class="col-md-4">
-            <h1 class="mt-3 display-4 text-dark mb-2" style="font-size: 30px">Geçmiş siparişler</h1>
+            <h1 class="mt-1 display-4 text-dark mb-2" style="font-size: 30px">Geçmiş siparişler</h1>
             <div class="accordion" id="orderAcordion">
                 @foreach (var order in Model.Orders)
                 {
