--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/AccessDenied.cshtml
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/AccessDenied.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="col-lg-12">
             <p class="alert alert-danger">
-                Bu alana erisim yetkiniz bulunmamaktadir. Detayli bilgi icin yoneticiye basvurunuz.
+                Bu alana erişim yetkiniz bulunmamaktadır. Detaylı bilgi için yöneticiyle görüşünüz.
             </p>
         </div>
     </div>
