--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/ChangePassword.cshtml
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 @model ChangePasswordViewModel
 <div class="container w-25 mt-4 ">
-    <h1 class="display-4 text-primary">Sifre degistir</h1>
+    <h1 class="display-4 text-primary">Şifre Değiştir</h1>
     <hr/>
     <form asp-controller="Account" asp-action="ChangePassword" method="post">
         <div class="text-danger" asp-validation-summary="All">
@@ -19,7 +19,7 @@
             <input class="form-control" asp-for="ReNewPassword"/>
         </div>
         <div>
-            <button type="submit" class="btn btn-success btn-block">Sifreyi degistir</button>
+            <button type="submit" class="btn btn-success btn-block">Şifremi Değiştir</button>
         </div>
     </form>
 </div>
