--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/ConfirmEmail.cshtml
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 @model string
 <div class="container">
     <h1 class="display-4">
-        Hesap Onay
+        Hesap Onayı
     </h1>
     <div asp-validation-summary="All" class="text-danger">
         
