--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/Login.cshtml
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-md-6 mt-4">
-                <a asp-area="" asp-controller="Account" asp-action="ForgotPassword" class="btn btn-link">Sifremi unuttum</a>
+                <a asp-area="" asp-controller="Account" asp-action="ForgotPassword" class="btn btn-link">Şifremi Unuttum</a>
             </div>
             <div class="col-md-6 mt-4">
                 <button type="submit" class="btn btn-primary w-100">Giriş Yap</button>
