--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/Profile.cshtml
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Views/Account/Profile.cshtml
@@ -4,9 +4,9 @@
         <div class="col-md-8">
             <form asp-area="" asp-controller="Account" asp-action="Profile" method="post">
                 <div class="d-flex justify-content-between align-items-center">
-                <h6 class="display-4 text-primary mt-1 mb-2" style="font-size: 30px">Kulanici bilgileri</h6>
+                <h6 class="display-4 text-primary mt-1 mb-2" style="font-size: 30px">Kullanıcı bilgileri</h6>
                 <div class="">
-                    <a asp-controller="Account" asp-action="ChangePassword" class="btn btn-primary btn-sm"> Sifre degistir</a>
+                    <a asp-controller="Account" asp-action="ChangePassword" class="btn btn-primary btn-sm"> Şifre değiştir</a>
                 </div>
                 </div>
                 <div class="row">
@@ -93,7 +93,7 @@
                     @* --- *@
 
                 </div>
-                <button type="submit" class="btn btn-success mt-3 btn-block">Degisikleri kaydet ve anasayfaya dön</button>
+                <button type="submit" class="btn btn-success mt-3 btn-block">Kaydet ve Anasayfaya Dön</button>
             </form>
         </div>
         <div class="col-md-4">
