--- a/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     </div>
     <!-- ./wrapper -->
     @await Html.PartialAsync("_Scripts")
+    @await Component.InvokeAsync("Notyf")
     @await RenderSectionAsync("Scripts", false)
 </body>
 
