--- a/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/Views/Shared/_Layout.cshtml
+++ b/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,11 @@
     @await Html.PartialAsync("_FooterSectionPartial")
     @await Html.PartialAsync("_SearchPartial")
 
+    
     @await Html.PartialAsync("_ScriptsPartial")
+    
+    @await Component.InvokeAsync("Notyf")
+    
     @await RenderSectionAsync("Scripts", false)
 </body>
 
