--- a/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/Views/Account/Login.cshtml
+++ b/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/Views/Account/Login.cshtml
@@ -21,6 +21,16 @@
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
             </div>
+            
+            <div class="col-md-12">
+                <div class="form-group  mb-0">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="RememberMe">
+                        <label asp-for="RememberMe" class="form-check-label"  for="RememberMe"></label>
+                    </div>
+                </div>
+            </div>
+            
             <div class="col-md-6 mt-4">
                 <a asp-area="" asp-controller="Account" asp-action="ForgotPassword" class="btn btn-link">Şifremi Unuttum</a>
             </div>
