--- a/Section-11-Identity/Week-20/03-03-2024/MiniShop/MiniShop.UI/Views/ShoppingCart/Index.cshtml
+++ b/Section-11-Identity/Week-20/03-03-2024/MiniShop/MiniShop.UI/Views/ShoppingCart/Index.cshtml
@@ -5,7 +5,7 @@
 <!-- Shop Cart Section Begin -->
 <section class="shop-cart spad">
     
-    <div class="container">
+    <div id="cart-container" class="container">
         @if (Model.ShoppingCartItems.Count == 0)
         {
             <div class="alert-warning text-center p-3">
@@ -47,26 +47,15 @@
                                 <td class="cart__price">@($"{item.ProductPrice:C0}")</td>
                                 <td class="cart__quantity">
                                     <div class="pro-qty">
-                                        <form id="form_qty_@item.Id"
-                                              asp-controller="ShoppingCart"
-                                              asp-action="ChangeQuantity"
-                                              method="post">
-                                            <input type="hidden" name="Id" value="@item.Id">
-                                            <span onclick="decrement(quantity_@item.Id);document.getElementById('form_qty_@item.Id').submit()" id="dec_@item.Id" class="dec qtybtn">-</span>
-                                            <input type="text" name="quantity" id="quantity_@item.Id" value="@item.Quantity">
-                                            <span onclick="increment(quantity_@item.Id);document.getElementById('form_qty_@item.Id').submit()" id="inc_@item.Id" class="inc qtybtn">+</span>
-                                        </form>
-
-
-                                        @* <span onclick="decrement(quantity_@item.Quantity);" class="dec qtybtn">-</span> *@
-                                        @* <input id="quantity_@item.Quantity" type="text" value="@item.Quantity"> *@
-                                        @* <span onclick="increment(quantity_@item.Quantity);" class="inc qtybtn">+</span> *@
+                                        <span onclick="decrement(quantity_@item.Id,@item.Id);" id="dec_@item.Id" class="dec qtybtn">-</span>
+                                        <input type="text" name="quantity" id="quantity_@item.Id" value="@item.Quantity">
+                                        <span onclick="increment(quantity_@item.Id,@item.Id);" id="inc_@item.Id" class="inc qtybtn">+</span>
                                     </div>
                                 </td>
                                 @{
                                     var total = item.ProductPrice * item.Quantity;
                                 }
-                                <td class="cart__total">@($"{total:C0}")</td>
+                                <td id="cart_item_total_@item.Id" class="cart__total">@($"{total:C0}")</td>
                                 <td class="cart__close">
                                     <a asp-area=""
                                        asp-controller="ShoppingCart"
@@ -90,10 +79,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="cart__btn update__btn">
-                    <a asp-area=""
-                       asp-controller="ShoppingCart"
-                       asp-action="ClearCart"
-                       asp-route-id="@Model.Id">
+                    <a onclick="clearCart(@Model.Id)">
                         <span class="icon_trash_alt"></span> Sepeti Temizle
                     </a>
                 </div>
@@ -117,8 +103,8 @@
                             var cartSubTotal = Model.TotalPrice() / 1.2m; // varsayilan vergi orani
                             var cartTotal = Model.TotalPrice() * 1;
                         }
-                        <li>Ara Toplam <span>@($"{cartSubTotal:C0}")</span></li>
-                        <li>Toplam<span>@($"{cartTotal:C0}")</span></li>
+                        <li>Ara Toplam <span id="sub-total" >@($"{Model.TotalPrice() / 1.2m:C0}")</span></li>
+                        <li>Toplam<span id="total" >@($"{cartTotal:C0}")</span></li>
                     </ul>
                     <a asp-controller="Order" asp-action="Checkout" class="primary-btn">Satın Al</a>
                 </div>
@@ -131,19 +117,70 @@
 @section Scripts
 {
     <script >
-        function decrement(element) {
+        function decrement(element, id) {
           let qty=element.value;
+          let cartTotalElement=$(`#cart_item_total_${id}`)
           if (qty>1){
               qty-=1
           }else {
               qty=1
               }
-          element.value =qty;
+          $.ajax({
+          url:'ShoppingCart/ChangeQuantity',
+          type:'POST',
+          data:{
+              itemId:id,
+              quantity:qty
+              },
+              success:function(response) {
+                element.value =qty;
+                cartTotalElement.text(response.cartItemTotal);
+                $('#total').text(response.cartTotal)
+                $('#sub-total').text(response.cartSubTotal)
+              },
+              error:function (){
+              
+              }
+          });
         }
-        function increment(element) {
+        function increment(element,id) {
           let qty=Number(element.value);
+          let cartTotalElement=$(`#cart_item_total_${id}`)
           qty+=1;
-          element.value =qty;
+            $.ajax({
+            url:'ShoppingCart/ChangeQuantity/',
+            type:'POST',
+            data:{
+                itemid:id,
+                quantity:qty
+                },
+                success:function(response) {
+                  element.value =qty;
+                  cartTotalElement.text(response.cartItemTotal);
+                  $('#total').text(response.cartTotal)
+                  $('#sub-total').text(response.cartSubTotal)
+                },
+                error:function (){
+                
+                }
+            });
+        }
+        function clearCart(id) {
+          $.ajax(
+              {
+              url:`ShoppingCart/ClearCart/${id}`,
+              type:'GET',
+              success:()=>{
+                  $('#cart-container').html(`   
+                        <div class="alert-warning text-center p-3">
+                             Sepetinizde ürün bulunmamaktadır.
+                        </div>`);
+              },
+              error:(err)=>{
+              console.log(err)    
+              }
+              }
+          )
         }
     </script>
 }
