Route yapısı değiştirildi. sorun var. login olunmuyor.

--- a/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Message/Index.cshtml
+++ b/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Message/Index.cshtml
@@ -36,7 +36,8 @@
                     <td class="d-flex justify-content-between">
                         <div>@message.Text.Substring(0, length)</div>
                         <div>
-                            <a asp-controller="Message" asp-action="ReadMessage" asp-route-id="@message.Id" class="btn btn-info btn-sm text-white" class="">Oku</a>
+                            @{var style=message.IsRead?"btn-danger":"btn-success";}
+                            <a asp-controller="Message" asp-action="ReadMessage" asp-route-id="@message.Id" class="btn @style btn-sm text-white" class="">Oku</a>
                         </div>
                     </td>
                 </tr>
