--- a/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/MessageNotification/Default.cshtml
+++ b/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/MessageNotification/Default.cshtml
@@ -1,5 +1,13 @@
+@model int
 <li>
-<a href="#"><span class="icon_heart_alt"></span>
-    <div class="tip">2</div>
-</a>
+    <a asp-controller="Message" asp-action="Index">
+        @{
+            bool isShowCount = Model == 0 ? false : true;
+        }
+        <span class="icon_mail_alt"></span>
+        @if (isShowCount)
+        {
+            <div class="tip">@Model</div>
+        }
+    </a>
 </li>
