--- a/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/ShoppingCartNotification/Default.cshtml
+++ b/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/ShoppingCartNotification/Default.cshtml
@@ -3,7 +3,7 @@
     <a asp-area=""
        asp-controller="ShoppingCart"
        asp-action="Index">
-        <span class="icon_bag_alt"></span>
+        <span class="icon_cart_alt"></span>
         @if (Model != 0)
         {
             <div class="tip">@Model</div>
