--- a/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Message/ReadMessage.cshtml
+++ b/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Message/ReadMessage.cshtml
@@ -1,16 +1,44 @@
 @model MessageViewModel
 
-<div class="container p-3">
+<div class="container w-50 p-3">
+
     <h1 class="display-4 text-primary">Gelen Mesaj</h1>
     <hr/>
-    
-    <label asp-for="FromName"></label>
-    <label >@Model.FromName</label>
-    
-    <label asp-for="Text"></label>
-    <label >@Model.Text</label>
-    
-    <label asp-for="SendTime"></label>
-    <label >@Model.SendTime</label>
-    <a asp-controller="Message" asp-action="Index" class="btn btn-warning btn-sm">Geri Dön</a>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="FromName"></label>
+                <label >@Model.FromName</label>
+            </div>
+
+            <div class="form-group">
+
+                <label asp-for="Text"></label>
+                <label >@Model.Text</label>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="SendTime"></label>
+                <label >@Model.SendTime</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <form asp-controller="Message" asp-action="NewMessage">
+                <input value="@Model.FromId" name="ToId" type="hidden">
+                <input value="@Model.Id" name="RelatedId" type="hidden">
+                <div class="form-group mb-2">
+
+                    <label class="" asp-for="ReplyText"></label>
+                    <textarea class="form-control" asp-for="ReplyText"></textarea>
+                </div>
+                <button type="submit" class="btn btn-warning btn-sm">Yanıtla</button>
+            </form>
+        </div>
+    </div>
+
+
+    <div class="">
+        <a asp-controller="Message" asp-action="Index" class="btn btn-warning btn-sm">Geri Dön</a>
+    </div>
 </div>
