--- a/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Order/Checkout.cshtml
+++ b/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Order/Checkout.cshtml
@@ -68,13 +68,13 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="checkout__form__input">
-                                    <p>Kart Sahibinin Adı Soyadı: <span>*</span></p>
+                                    <p>Kart Üzerindeki Adı Soyadı: <span>*</span></p>
                                     <input asp-for="CardName">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="checkout__form__input">
-                                    <p>Kart Numarası <span>*</span></p>
+                                    <p>Kart Numarası: <span>*</span></p>
                                     <input asp-for="CardNumber">
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="checkout__order">
-                            <h5>Your order</h5>
+                            <h5>Siparişiniz</h5>
                             <div class="checkout__order__product">
                                 <ul>
                                     <li>
