--- a/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Home/Index.cshtml
+++ b/Section-11-Identity/Week-21/07-03-2024/MiniShop/MiniShop.UI/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                                             <input type="hidden" value="1" name="quantity">
                                             <button type="submit" style="background-color: transparent; border: none">
                                                 <a>
-                                                    <span class="icon_bag_alt"></span>
+                                                    <span class="icon_cart_alt"></span>
                                                 </a>
                                             </button>
                                         </form>
