url yhapısıyla ilgili sorunu çözmek için çözüm Default.cshtml içinde 12. satırda asp route id yerine categoryid yapmak

--- a/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/Categories/Default.cshtml
+++ b/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/Categories/Default.cshtml
@@ -9,7 +9,7 @@
                     <div class="categories__text">
                         <h1>@Model[0].Name</h1>
                         <p>@Model[0].Description</p>
-                        <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-id="@Model[0].Id">Alışveriş Yap</a>
+                        <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-categoryUrl="@Model[0].Id">Alışveriş Yap</a>
                     </div>
                 </div>
             </div>
